[package]
name = "happy_server"
version = "0.1.0"
edition = "2018"
authors = ["aoki <blz.soft@outlook.jp>"]
repository = "https://github.com/blz-soft/happy_server"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
japanese = []
english = []

[dependencies]
# webserver
actix-web = "3"
# static file webserver
actix-files = "0.5.0" 