[package]
name = "happy_server"
version = "0.1.1"
edition = "2018"
authors = ["aoki <blz.soft@outlook.jp>"]
repository = "https://github.com/blz-soft/happy_server"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# language default
japanese = []
english = []

# cli color default
no_color = []

# viewer type
cli = []

[dependencies]
# webserver
actix-web = "3"
# static file webserver
actix-files = "0.5.0" 
# Add color to console output
colored = "2"

[dev-dependencies]
actix-rt = "2.2.0"
# tokio = { version = "1", features = ["full"] }